syntax = "proto3";
package ffstream_grpc;
option go_package = "go/ffstream_grpc";

service FFStream {
  rpc SetLoggingLevel(SetLoggingLevelRequest) returns (SetLoggingLevelReply) {}
  rpc RemoveOutput(RemoveOutputRequest) returns (RemoveOutputReply) {}
  rpc GetRecoderConfig(GetRecoderConfigRequest) returns (GetRecoderConfigReply) {}
  rpc SetRecoderConfig(SetRecoderConfigRequest) returns (SetRecoderConfigReply) {}
  rpc GetTolerableOutputQueueSizeBytes(GetTolerableOutputQueueSizeBytesRequest) returns (GetTolerableOutputQueueSizeBytesReply) {}
  rpc SetTolerableOutputQueueSizeBytes(SetTolerableOutputQueueSizeBytesRequest) returns (SetTolerableOutputQueueSizeBytesReply) {}
  rpc GetStats(GetStatsRequest) returns (GetStatsReply) {}
  rpc GetOutputSRTStats(GetOutputSRTStatsRequest) returns (GetOutputSRTStatsReply) {}
  rpc GetSRTFlagInt(GetSRTFlagIntRequest) returns (GetSRTFlagIntReply) {}
  rpc SetSRTFlagInt(SetSRTFlagIntRequest) returns (SetSRTFlagIntReply) {}
  rpc WaitChan(WaitRequest) returns (stream WaitReply) {}
  rpc End(EndRequest) returns (EndReply) {}
}

enum LoggingLevel {
  LoggingLevelNone = 0;
  LoggingLevelFatal = 1;
  LoggingLevelPanic = 2;
  LoggingLevelError = 3;
  LoggingLevelWarn = 4;
  LoggingLevelInfo = 5;
  LoggingLevelDebug = 6;
  LoggingLevelTrace = 7;
}

message SetLoggingLevelRequest {
  LoggingLevel level = 1;
}

message SetLoggingLevelReply {}

message customOption {
  string key = 1;
  string value = 2;
}

message RemoveOutputRequest {
  uint64 id = 1;
}
message RemoveOutputReply {}

message AudioCodecConfig {
  string codecName = 1;
  uint64 averagingPeriod = 2;
  uint64 AverageBitRate = 3;
  repeated customOption customOptions = 4;
}
message VideoCodecConfig {
  string codecName = 1;
  uint64 averagingPeriod = 2;
  uint64 AverageBitRate = 3;
  repeated customOption customOptions = 4;
  string hardwareDeviceType = 5;
  string hardwareDeviceName = 6;
  uint32 width = 7;
  uint32 height = 8;
}
message RecoderConfig {
  AudioCodecConfig audio = 1;
  VideoCodecConfig video = 2;
}
message GetRecoderConfigRequest {}
message GetRecoderConfigReply {
  RecoderConfig config = 1;
}
message SetRecoderConfigRequest {
  RecoderConfig config = 1;
}
message SetRecoderConfigReply {}

message GetTolerableOutputQueueSizeBytesRequest {}

message GetTolerableOutputQueueSizeBytesReply {
  uint64 value = 1;
}

message SetTolerableOutputQueueSizeBytesRequest {
  uint64 value = 1;
}

message SetTolerableOutputQueueSizeBytesReply {}

message GetStatsRequest {}
message GetStatsReply {
  uint64 BytesCountRead = 1;
  uint64 BytesCountBuffered = 2;
  uint64 BytesCountDropped = 3;
  uint64 BytesCountWrote = 4;
  CommonsProcessingPacketsOrFramesStatistics Packets = 5;
  CommonsProcessingPacketsOrFramesStatistics Frames = 6;
}

message CommonsProcessingPacketsOrFramesStatistics {
  CommonsProcessingPacketsOrFramesStatisticsSection read = 5;
  CommonsProcessingPacketsOrFramesStatisticsSection missed = 6;
  CommonsProcessingPacketsOrFramesStatisticsSection dropped = 7;
  CommonsProcessingPacketsOrFramesStatisticsSection wrote = 8;
}

message CommonsProcessingPacketsOrFramesStatisticsSection {
  uint64 Unknown = 1;
  uint64 Other = 2;
  uint64 Video = 3;
  uint64 Audio = 4;
}

message GetOutputSRTStatsRequest {
  int32 outputID = 1;
}
message GetOutputSRTStatsReply {
  int64 msTimeStamp = 1;
  int64 pktSentTotal = 2;
  int64 pktRecvTotal = 3;
  int64 pktSndLossTotal = 4;
  int64 pktRcvLossTotal = 5;
  int64 pktRetransTotal = 6;
  int64 pktSentACKTotal = 7;
  int64 pktRecvACKTotal = 8;
  int64 pktSentNAKTotal = 9;
  int64 pktRecvNAKTotal = 10;
  int64 usSndDurationTotal = 11;
  int64 pktSndDropTotal = 12;
  int64 pktRcvDropTotal = 13;
  int64 pktRcvUndecryptTotal = 14;
  uint64 byteSentTotal = 15;
  uint64 byteRecvTotal = 16;
  uint64 byteRcvLossTotal = 17;
  uint64 byteRetransTotal = 18;
  uint64 byteSndDropTotal = 19;
  uint64 byteRcvDropTotal = 20;
  uint64 byteRcvUndecryptTotal = 21;
  int64 pktSent = 22;
  int64 pktRecv = 23;
  int64 pktSndLoss = 24;
  int64 pktRcvLoss = 25;
  int64 pktRetrans = 26;
  int64 pktRcvRetrans = 27;
  int64 pktSentACK = 28;
  int64 pktRecvACK = 29;
  int64 pktSentNAK = 30;
  int64 pktRecvNAK = 31;
  double mbpsSendRate = 32;
  double mbpsRecvRate = 33;
  int64 usSndDuration = 34;
  int64 pktReorderDistance = 35;
  double pktRcvAvgBelatedTime = 36;
  int64 pktRcvBelated = 37;
  int64 pktSndDrop = 38;
  int64 pktRcvDrop = 39;
  int64 pktRcvUndecrypt = 40;
  uint64 byteSent = 41;
  uint64 byteRecv = 42;
  uint64 byteRcvLoss = 43;
  uint64 byteRetrans = 44;
  uint64 byteSndDrop = 45;
  uint64 byteRcvDrop = 46;
  uint64 byteRcvUndecrypt = 47;
  double usPktSndPeriod = 48;
  int64 pktFlowWindow = 49;
  int64 pktCongestionWindow = 50;
  int64 pktFlightSize = 51;
  double msRTT = 52;
  double mbpsBandwidth = 53;
  int64 byteAvailSndBuf = 54;
  int64 byteAvailRcvBuf = 55;
  double mbpsMaxBW = 56;
  int64 byteMSS = 57;
  int64 pktSndBuf = 58;
  int64 byteSndBuf = 59;
  int64 msSndBuf = 60;
  int64 msSndTsbPdDelay = 61;
  int64 pktRcvBuf = 62;
  int64 byteRcvBuf = 63;
  int64 msRcvBuf = 64;
  int64 msRcvTsbPdDelay = 65;
  int64 pktSndFilterExtraTotal = 66;
  int64 pktRcvFilterExtraTotal = 67;
  int64 pktRcvFilterSupplyTotal = 68;
  int64 pktRcvFilterLossTotal = 69;
  int64 pktSndFilterExtra = 70;
  int64 pktRcvFilterExtra = 71;
  int64 pktRcvFilterSupply = 72;
  int64 pktRcvFilterLoss = 73;
  int64 pktReorderTolerance = 74;
  int64 pktSentUniqueTotal = 75;
  int64 pktRecvUniqueTotal = 76;
  uint64 byteSentUniqueTotal = 77;
  uint64 byteRecvUniqueTotal = 78;
  int64 pktSentUnique = 79;
  int64 pktRecvUnique = 80;
  uint64 byteSentUnique = 81;
  uint64 byteRecvUnique = 82;
}

enum SRTFlagInt {
  undefined = 0;
  Latency = 1;
}

message GetSRTFlagIntRequest {
  int32 outputID = 1;
  SRTFlagInt flag = 2;
}
message GetSRTFlagIntReply {
  int64 value = 1;
}
message SetSRTFlagIntRequest {
  int32 outputID = 1;
  SRTFlagInt flag = 2;
  int64 value = 3;
}
message SetSRTFlagIntReply {}

message WaitRequest {}
message WaitReply {}
message EndRequest {}
message EndReply {}
